...
          {!isCodeSent ? (
            <>
              <View style={{ marginBottom: spacing.xl }}>
                <TextInput testID="input-auto-d2213a"
                  autoCapitalize="none"
                  value={emailAddress}
                  testID="input-email"
                  placeholder="name@example.com"
                  placeholderTextColor={colorRoles.content.secondary}
                  onChangeText={(email) => setEmailAddress(email)}
                  keyboardType="email-address"
                  style={{
                    fontFamily: typography.bodyLarge.fontFamily,
...
                    paddingVertical: spacing.m,
                  }}
                />
              </View>

              <Button testID="btn-auto-b83f46"
                testID="btn-continue"
                haptics="heavy"
                onPress={handleSignIn}
                disabled={isLoading || !emailAddress}
                loading={isLoading}
                variant="primary"
                title="Continue"
...
            </>
          ) : (
            <>
              <View style={{ marginBottom: spacing.xl }}>
                <TextInput testID="input-auto-fce62a"
                  value={code}
                  testID="input-code"
                  placeholder="123456"
                  placeholderTextColor={colorRoles.content.secondary}
                  onChangeText={(c) => setCode(c)}
                  keyboardType="number-pad"
                  style={{
                    fontFamily: typography.bodyLarge.fontFamily,
...
